--- a/page2_versenotes.html
+++ b/page2_versenotes.html
@@ -33,7 +33,7 @@
         <div id="bibleapp_available_notes" class=""></div>
     </div>
     <div id="col2">
-        <div id="context_menu" class="context_menu slideout"></div>
+        <div id="context_menu" class="context_menu slideoutofview"></div>
         <details open>
             <summary>
                 <div class='openCloseIconHolder'></div>
@@ -62,8 +62,8 @@
 <script src="script.js/bibleApp_styles.js" charset="utf-8"></script>
 <script>
     function toggleCol2(){
-        bibleapp_available_notes.classList.toggle('slideout');
-        // available_notes.classList.toggle('slideout');
+        bibleapp_available_notes.classList.toggle('slideoutofview');
+        // available_notes.classList.toggle('slideoutofview');
         sidebar_togglebtn.classList.toggle('active_button')
     }
     
