--- a/page3_scriptureCompare.html
+++ b/page3_scriptureCompare.html
@@ -20,8 +20,8 @@
     <div id="bibleversions_btns"></div>
   </div>
   <main id="main" contenteditable="false">
-    <div id="context_menu" class="context_menu slideout"></div>
-    <div id="show_crossref_comments" class="slideout">
+    <div id="context_menu" class="context_menu slideoutofview"></div>
+    <div id="show_crossref_comments" class="slideoutofview">
       <button class="buttons" id="verse_crossref_button">TSK</button>
       <button class="buttons" id="verse_notes_button">Note</button>
     </div>
