--- a/index.html
+++ b/index.html
@@ -280,6 +280,18 @@
             <input type="color" style="width: 100px;height: 100px;padding:0;border:0;flex-basis: 50%;" onchange="changeBackGround(this.value,'--ref-img')"></input>
             <button style="flex-basis: 50%;" onclick="changeBackGround('url(images/background.jpg)','--ref-img')">Default</button>
           </div>
+          <div>
+            <div class="settingssectionheadings">Shortcut Keys</div>
+            <ul>
+              <li>Alt + T: Toggle Showing translated word when the displayed word is the Lemma Transliteration</li>
+              <li>Alt + T: Toggle Showing Hebrew/Greek Lemma Transliteration</li>
+              <li>Alt + H: Toggle highlighting hovered version</li>
+              <li>Ctrl + Up Arrow Key: Go to previous chapter</li>
+              <li>Ctrl + Down Arrow Key: Go to next chapter</li>
+              <li>Ctrl + Shift + f: Search for highlighted text</li>
+              <li>Escape: Toggle Showing side and top bar and their contents</li>
+            </ul>
+          </div>
         </div>
         <div id="bibleapp_available_notes" class="slideoutofview displaynone">
         </div>
