--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- <link rel="manifest" href="manifest.json"> -->
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
-  <script src="ckeditor-standard/ckeditor.js"></script>
+  <script src="ckeditor/ckeditor.js"></script>
   <script src="script.js/interact.min.js"></script>
-<style id="verse_alignement">
+  <style id="verse_alignement">
     .verse {
       display: block;
     }
