--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
                   <button class="eng2grk_sup_btns" id="crossRefinScriptureTooltip" onclick="checkUncheck(crossRefinScriptureTooltip_check)"  title="Show TSK In Scripture Tooltip"><input type="checkbox" id="crossRefinScriptureTooltip_check" name="crossRefinScriptureTooltip_check" value="crossRefinScriptureTooltip_check">CRef</button>
                 </td>
               </tr>
+              <tr>
+                <td>Center Navigations & Settings</td>
+                <td>
+                  <button class="eng2grk_sup_btns" id="center_settings_h" onclick="centerNavigationAndOtherSettings('h')"  title="Center Settings Horizontally"><input type="checkbox" id="center_settings_h_check" name="center_settings_h_check" value="center_settings_h_check">Horizontally</button>
+                  <button class="eng2grk_sup_btns" id="center_settings_v" onclick="centerNavigationAndOtherSettings('v')"  title="Center Settings Vertically"><input type="checkbox" id="center_settings_v_check" name="center_settings_v_check" value="center_settings_v_check">Vertically</button>
+                </td>
+              </tr>
             </table>
           </div>
           <div class="settingssectionheadings">Change Font</div>
